--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -807,7 +807,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(35, 35, 35, 0.5);
+  background: rgba(35, 35, 35, 0.9);
 }
 .cid-sJuK74zake .navbar.opened {
   transition: all 0.3s;
@@ -983,7 +983,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #000000;
 }
 .cid-sJuK74zake button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1055,7 +1055,7 @@ a {
   }
 }
 .cid-sJuJZrdEAm {
-  background-image: url("../../../assets/images/11455152.png");
+  background-image: url("../../../assets/images/35862399-xwtaposcywgrkra-1.png");
 }
 .cid-sJuJZrdEAm .mbr-section-title {
   color: #ffffff;
@@ -1173,7 +1173,7 @@ a {
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
   position: absolute;
-  background: rgba(35, 35, 35, 0.5);
+  background: rgba(35, 35, 35, 0.9);
 }
 .cid-sJuK74zake .navbar.opened {
   transition: all 0.3s;
@@ -1349,7 +1349,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #000000;
 }
 .cid-sJuK74zake button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1715,7 +1715,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #000000;
 }
 .cid-sJuK74zake button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
