Hamburger aint white

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -983,7 +983,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #000000;
+  background-color: #ffffff;
 }
 .cid-sJuK74zake button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1349,7 +1349,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #000000;
+  background-color: #ffffff;
 }
 .cid-sJuK74zake button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1715,7 +1715,7 @@ a {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #000000;
+  background-color: #ffffff;
 }
 .cid-sJuK74zake button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
